[package]
name = "metaplex-indexer-rabbitmq-accountsdb"
version = "0.1.0"
authors = [
  "ryans <ryans@holaplex.com>",
]
edition = "2021"
description = "Solana AccountsDB adapter for metaplex-indexer RabbitMQ transport"
documentation = "https://docs.rs/metaplex-indexer-rabbitmq-accountsdb"
readme = "../../README.md"
repository = "https://github.com/holaplex/metaplex-indexer"
license = "AGPL-3.0-or-later"
keywords = ["solana", "metaplex", "holaplex", "web3", "rabbitmq"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[lib]
crate_type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.52"
async-trait = "0.1.52"
bs58 = "0.4.0"
futures-util = "0.3.19"
lapin = "1.9.0"
lapinou = "1.1.0"
log = "0.4.14"
rmp-serde = "1.0.0-beta.2"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
serde_with = "1.11.0"
smol = "1.2.5"
strum = { version = "0.23.0", features = ["derive"], optional = true }
thiserror = "1.0.30"

solana-accountsdb-plugin-interface = "1.9.12"
solana-logger = "1.9.12"
solana-program = "1.9.12"
solana-sdk = "1.9.12"
solana-metrics = "1.9.12"
spl-token = "3.2.0"
reqwest = "0.11.6"

[dependencies.indexer-rabbitmq]
package = "metaplex-indexer-rabbitmq"
version = "=0.1.0"
path = "../rabbitmq"
default_features = false
features = ["producer", "accountsdb"]
